# cat-repo-auditor

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  README.ja.md  README.md  _config.yml  audit_config.toml  build.rs  cat_repo_auditor.py  check_local_workflows.py  github_local_checker.py  requirements.txt  sync_workflows.py
.github/: copilot-instructions.md
issue-notes/: 100.md  102.md  104.md  107.md  112.md  113.md  114.md  117.md  119.md  120.md  124.md  126.md  127.md  131.md  135.md  137.md  144.md  146.md  147.md  149.md  152.md  157.md  159.md  161.md  163.md  164.md  165.md  166.md  169.md  173.md  175.md  177.md  179.md  185.md  187.md  189.md  191.md  193.md  22.md  24.md  (+37 more)
python/: cat_repo_auditor.py  check_local_workflows.py
src/: app.rs  app_cargo_polls.rs  app_search.rs  app_test_support.rs  app_tests.rs  config.rs  config_tests.rs  github.rs  github_cargo_worker.rs  github_fetch.rs  github_fetch_tests.rs  github_local.rs  github_local_cargo.rs  github_local_cargo_hash.rs  github_local_cargo_hash_checkout.rs  github_local_cargo_hash_remote.rs  github_local_cargo_tests.rs  github_local_cargo_tests_success.rs  github_local_checks.rs  github_local_git.rs  github_local_launch.rs  github_local_tests.rs  github_tests.rs  github_types.rs  history.rs  history_tests.rs  main.rs  main_cli.rs  main_fetch.rs  main_fetch_tests.rs  main_helpers.rs  main_input.rs  main_input_tests.rs  main_launch.rs  main_tests.rs  self_update.rs  self_update_tests.rs  ui.rs  ui_detail.rs  ui_detail_boxes.rs  (+4 more)
tests/: test_auditor.py  test_auto_updater.py  test_cache.py  (+6 more)
(+98 files in other folders)
